packages/babel-parser/test/fixtures/typescript/types/variance-annotations-with-jsx-error/input.tsx
// valid JSX
<in T>() => {}</in>;

// SyntaxError: Single type parameter T should have a trailing comma.
<in T>() => {};
